--- a/Python01-IMSP_fawaz.ipynb
+++ b/Python01-IMSP_fawaz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "134b360b",
+   "id": "353bf74e",
    "metadata": {},
    "source": [
     "1.\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d84ba975",
+   "id": "8b567d76",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1eeaf90",
+   "id": "a97c3575",
    "metadata": {},
    "source": [
     "(ii)"
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d14b4a3c",
+   "id": "f4c1814d",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cce5dc68",
+   "id": "c9fafc18",
    "metadata": {},
    "source": [
     "2."
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "7e9a266b",
+   "id": "d289cb81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e2f3788",
+   "id": "03007502",
    "metadata": {},
    "source": [
     "3."
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "5dc07e36",
+   "id": "e13efeb1",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29814bd6",
+   "id": "c9224f50",
    "metadata": {},
    "source": [
     "4."
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "d4ba9d86",
+   "id": "6afb7d68",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28853be7",
+   "id": "64b24967",
    "metadata": {},
    "source": [
     "5."
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccf04e55",
+   "id": "789153ad",
    "metadata": {},
    "source": [
     "6.\n"
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b865c772",
+   "id": "9609dd31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,6 +208,87 @@
     "while i <30:\n",
     "    x="
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42f1ab88",
+   "metadata": {},
+   "source": [
+    "7.\n",
+    "a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "883e31c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annee = 2004\n",
+    "if(annee%4==0 and annee%100!=0 or annee%400==0):\n",
+    "    print(\"L'annee est une annee bissextile!\")\n",
+    "else:\n",
+    "    print(\"L'annee n'est pas une annee bissextile!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0fa79ae",
+   "metadata": {},
+   "source": [
+    "b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "792406d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dba3deaf",
+   "metadata": {},
+   "source": [
+    "8.\n",
+    "a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfe1b4e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n=15\n",
+    "for n in range(0,n):\n",
+    "   if n > 1:\n",
+    "       for i in range(2,n):\n",
+    "           if (n % i) == 0:\n",
+    "               break\n",
+    "       else:\n",
+    "           print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16657de2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a6a7203",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
